example/kube-vue-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-vue-system
  labels:
    app: kube-vue
